--- a/ia.html
+++ b/ia.html
@@ -124,7 +124,7 @@
             <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
             <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
             <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
-            <li><a href="seo.html" class="submenu-link">Réseaux sociaux</a></li>
+            <li><a href="reseaux_sociaux.html" class="submenu-link">Réseaux sociaux</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -133,7 +133,7 @@
             <li><a href="automatisation.html" class="submenu-link">Automatisation</a></li>
             <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
             <li><a href="erp.html" class="submenu-link">ERP</a></li>
-            <li><a href="intelligence_artificielle.html" class="submenu-link">Intelligence Artificielle</a></li>
+            <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
