--- a/visible_seo.html
+++ b/visible_seo.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sécurité IT - Porokhane Digital Consulting</title>
-  <meta name="description" content="Sécurisation complète de votre site WordPress. Audit, protection, surveillance et support continu pour une sécurité optimale.">
+  <title>Algorithme Google SEO 2024 - Porokhane Digital Consulting</title>
+  <meta name="description" content="Découvrez les 10 astuces pour être visible avec l'algorithme Google SEO 2024. Optimisez votre référencement avec les dernières tendances.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -12,7 +12,6 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { background: var(--gris-bg); font-family: 'Inter', sans-serif; color: var(--gris-titre); line-height: 1.6; min-height: 100vh; background: linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.92)), url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed; background-size: cover; }
     .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
-     .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
     .navbar { background: rgba(255,255,255,0.95); backdrop-filter: blur(10px); padding: 1rem 0; border-bottom: 1px solid var(--gris-fonce); position: sticky; top: 0; z-index: 1000; }
     .nav-container { display: flex; justify-content: space-between; align-items: center; }
     .nav-logo h2 { color: var(--vert); font-size: 1.5rem; margin: 0; display: flex; align-items: center; gap: 0.5rem; }
@@ -74,29 +73,31 @@
     .chatbot-send:hover { background: linear-gradient(90deg, var(--bleu), var(--vert)); }
     .chatbot-message.bot { display: flex; align-items: flex-start; gap: 0.7rem; }
     .chatbot-avatar { width: 36px; height: 36px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px rgba(31,164,122,0.07); border: 2px solid var(--vert); flex-shrink: 0; }
-    /* ... (copier tout le CSS du header/footer/chatbot de strategie_digitale.html) ... */
-    .service-main { max-width: 700px; margin: 60px auto 40px auto; background: var(--blanc); border-radius: var(--rayon-grand); box-shadow: var(--ombre); padding: 40px 28px 32px 28px; position: relative; z-index: 2; }
-    .service-title { display: flex; align-items: center; gap: 1rem; font-size: 2.3rem; font-weight: 800; color: var(--vert); margin-bottom: 1.2rem; }
-    .service-title i { font-size: 2.2rem; color: var(--bleu); }
-    .service-intro { font-size: 1.15rem; color: var(--gris-texte); margin-bottom: 2.2rem; }
-    .service-section-title { color: var(--bleu); font-size: 1.25rem; font-weight: 700; margin-bottom: 0.7rem; margin-top: 2.2rem; display: flex; align-items: center; gap: 0.5rem; }
-    .service-steps { margin-bottom: 2.2rem; padding-left: 0; list-style: none; }
-    .service-step { background: var(--vert-clair); border-radius: var(--rayon); box-shadow: 0 2px 10px rgba(31,164,122,0.04); margin-bottom: 1.5rem; padding: 1.3rem 1.5rem 1.3rem 3.5rem; position: relative; }
-    .service-step:last-child { margin-bottom: 0; }
-    .service-step-num { position: absolute; left: -30px; top: 1.3rem; width: 38px; height: 38px; background: var(--bleu); color: var(--blanc); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.15rem; font-weight: 700; box-shadow: 0 2px 8px rgba(37,99,235,0.10); border: 3px solid var(--blanc); z-index: 2; }
-    .service-step-title { font-size: 1.13rem; font-weight: 700; color: var(--bleu); margin-bottom: 0.3rem; display: flex; align-items: center; gap: 0.5rem; }
-    .service-step ul { margin: 0.2rem 0 0 0; padding-left: 1.2rem; color: var(--gris-texte); }
-    .service-step ul li { margin-bottom: 0.2rem; list-style: none; position: relative; padding-left: 1.2em; }
-    .service-step ul li:before { content: '\f058'; font-family: 'Font Awesome 6 Free'; font-weight: 900; color: var(--vert); position: absolute; left: 0; top: 0.1em; font-size: 1em; }
-    .service-unique-list { margin-bottom: 2rem; padding-left: 0; list-style: none; display: flex; flex-wrap: wrap; gap: 1.1rem 2.2rem; }
-    .service-unique-list li { display: flex; align-items: center; gap: 0.7rem; font-size: 1.08rem; color: var(--gris-titre); background: var(--gris-bg); border-radius: 12px; padding: 0.5rem 1.1rem; font-weight: 500; }
-    .service-unique-list li i { color: var(--bleu); font-size: 1.1rem; }
-    .service-contact { background: var(--bleu-clair); border-radius: var(--rayon); padding: 1.2rem 1.5rem; margin-top: 2.5rem; color: var(--gris-titre); font-size: 1.08rem; box-shadow: 0 2px 8px rgba(37,99,235,0.06); }
-    .service-contact strong { color: var(--bleu); }
-    .service-contact a { color: var(--vert); font-weight: 600; text-decoration: none; }
-    .service-contact a:hover { text-decoration: underline; }
-    @media (max-width: 800px) { .service-main { padding: 28px 6vw; } }
-    @media (max-width: 600px) { .service-main { padding: 18px 2vw; } .service-title { font-size: 1.4rem; } .service-step { padding: 1.2rem 1rem 1.2rem 2.8rem; } .service-step-num { left: -20px; width: 28px; height: 28px; font-size: 0.95rem; } }
+    
+    /* Styles pour l'article blog */
+    .blog-main { max-width: 800px; margin: 60px auto 40px auto; background: var(--blanc); border-radius: var(--rayon-grand); box-shadow: var(--ombre); padding: 40px 32px; position: relative; z-index: 2; }
+    .blog-title { display: flex; align-items: center; gap: 1rem; font-size: 2.4rem; font-weight: 800; color: var(--vert); margin-bottom: 1.5rem; }
+    .blog-title i { font-size: 2.2rem; color: var(--bleu); }
+    .blog-intro { font-size: 1.2rem; color: var(--gris-texte); margin-bottom: 2.5rem; line-height: 1.7; }
+    .blog-section { margin-bottom: 2.5rem; }
+    .blog-section h2 { color: var(--bleu); font-size: 1.5rem; font-weight: 700; margin-bottom: 1rem; display: flex; align-items: center; gap: 0.5rem; }
+    .blog-section h3 { color: var(--gris-titre); font-size: 1.2rem; font-weight: 600; margin: 1.5rem 0 0.8rem 0; }
+    .blog-section p { color: var(--gris-texte); margin-bottom: 1rem; line-height: 1.7; }
+    .blog-tip { background: var(--vert-clair); border-left: 4px solid var(--vert); border-radius: 8px; padding: 1.2rem; margin: 1.5rem 0; color: var(--gris-titre); }
+    .blog-bonus { background: var(--bleu-clair); border-left: 4px solid var(--bleu); border-radius: 8px; padding: 1.2rem; margin: 1.5rem 0; color: var(--gris-titre); }
+    .blog-summary { background: linear-gradient(135deg, var(--vert-clair), var(--bleu-clair)); border-radius: 12px; padding: 1.5rem; margin: 2rem 0; }
+    .blog-quote { background: var(--gris-bg); border-left: 4px solid var(--vert); border-radius: 8px; padding: 1.2rem; margin: 1.5rem 0; font-style: italic; color: var(--gris-titre); }
+    .blog-code { background: var(--gris-bg); border-radius: 6px; padding: 0.3rem 0.6rem; font-family: 'Courier New', monospace; color: var(--bleu); font-size: 0.9rem; }
+    .blog-hashtags { display: flex; flex-wrap: wrap; gap: 0.5rem; margin: 2rem 0; }
+    .blog-hashtag { background: var(--vert-clair); color: var(--vert); padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.9rem; font-weight: 600; }
+    .blog-articles { margin-top: 3rem; }
+    .blog-article-item { background: var(--gris-bg); border-radius: 12px; padding: 1.5rem; margin-bottom: 1.5rem; transition: transform 0.2s; }
+    .blog-article-item:hover { transform: translateY(-2px); }
+    .blog-article-title { font-size: 1.2rem; font-weight: 600; color: var(--bleu); margin-bottom: 0.5rem; }
+    .blog-article-link { color: var(--vert); font-weight: 600; text-decoration: none; }
+    .blog-article-link:hover { text-decoration: underline; }
+    @media (max-width: 800px) { .blog-main { padding: 28px 6vw; } .blog-title { font-size: 2rem; } }
+    @media (max-width: 600px) { .blog-main { padding: 20px 4vw; } .blog-title { font-size: 1.6rem; } }
   </style>
 </head>
 <body>
@@ -145,62 +146,134 @@
       </ul>
     </div>
   </nav>
-  <main class="service-main">
-    <div class="service-title"><i class="fas fa-shield-alt"></i> Service de Sécurité IT</div>
-    <div class="service-intro">Pourquoi sécuriser votre site WordPress ?<br>Parce qu'un site web vulnérable peut entraîner des pertes financières, une perte de crédibilité et une exposition aux cyberattaques. Notre service de sécurité assure la protection, la stabilité et la conformité de votre site face aux menaces actuelles.</div>
-    <div class="service-section-title">Notre approche : prévention, surveillance & restauration rapide</div>
-    <ol class="service-steps">
-      <li class="service-step">
-        <div class="service-step-num">1</div>
-        <div class="service-step-title">Audit de sécurité & diagnostic initial</div>
-        <ul>
-          <li>Analyse complète des vulnérabilités : fichiers, plugins, base de données</li>
-          <li>Évaluation des permissions, thèmes, et configurations serveur</li>
-          <li>Rapport d'audit et recommandations personnalisées</li>
-        </ul>
-      </li>
-      <li class="service-step">
-        <div class="service-step-num">2</div>
-        <div class="service-step-title">Mise en sécurité & durcissement du site</div>
-        <ul>
-          <li>Installation de pare-feu (WAF), anti-spam et protection anti-brute-force</li>
-          <li>Blocage des IP malveillantes, désactivation des accès inutiles</li>
-          <li>Renforcement des mots de passe et politiques d'accès</li>
-        </ul>
-      </li>
-      <li class="service-step">
-        <div class="service-step-num">3</div>
-        <div class="service-step-title">Sauvegardes & mises à jour</div>
-        <ul>
-          <li>Sauvegardes automatiques quotidiennes sur serveur externe</li>
-          <li>Planification des mises à jour sécurisées (WordPress, plugins, thème)</li>
-          <li>Possibilité de restauration en 1 clic en cas d'incident</li>
-        </ul>
-      </li>
-      <li class="service-step">
-        <div class="service-step-num">4</div>
-        <div class="service-step-title">Surveillance & support continu</div>
-        <ul>
-          <li>Surveillance 24h/24 avec alertes en temps réel</li>
-          <li>Support technique en cas d'attaque ou de piratage</li>
-          <li>Mises à jour de sécurité régulières selon les dernières vulnérabilités connues</li>
-        </ul>
-      </li>
-    </ol>
-    <div class="service-section-title" style="color:var(--vert);">Ce qui rend notre solution unique</div>
-    <ul class="service-unique-list">
-      <li><i class="fas fa-shield-alt"></i> Protection proactive et personnalisée</li>
-      <li><i class="fas fa-eye"></i> Interface claire pour le suivi des alertes</li>
-      <li><i class="fas fa-plug"></i> Compatible avec WooCommerce, Elementor, WPML, etc.</li>
-      <li><i class="fas fa-headset"></i> Accompagnement dédié avec conseils et formation</li>
-    </ul>
-    <div class="service-contact">
-      <strong>Contact :</strong> Pour sécuriser durablement votre site WordPress :<br>
-      <strong>Email :</strong> <a href="mailto:responsable.marketing@digital-porokhane.com">responsable.marketing@digital-porokhane.com</a><br>
-      <strong>Téléphone :</strong> <a href="tel:+221776125660">+221 77 612 56 60</a><br>
-      <strong>Site web :</strong> <a href="https://www.porokhane.digital" target="_blank">www.porokhane.digital</a>
+
+  <main class="blog-main">
+    <div class="blog-title"><i class="fas fa-search"></i> Algorithme Google SEO 2024 : 10 astuces pour être visible</div>
+    <div class="blog-intro">Parmi les facteurs de classement utilisés par <strong>l'algorithme Google en 2024</strong>, on retrouve, en premier, la publication continue de contenus engageants. Une bonne nouvelle pour les sites internet qui accordent une grande importance à la valeur ajoutée de leurs pages et articles !</div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-brain"></i> 1. Adapter vos contenus à l'algorithme MUM de Google</h2>
+      <p>Google a commencé le déploiement de son algorithme MUM (Multitask Unified Model) depuis juin 2021. Plus performant que son prédécesseur BERT, son objectif est d'aider le moteur de recherche à répondre aux requêtes complexes des internautes grâce à l'Intelligence Artificielle.</p>
+      <div class="blog-tip">
+        <strong>Comment adapter vos contenus :</strong><br>
+        • Misez sur les mots-clés de longue traîne<br>
+        • Ajoutez des mots-clés locaux précis<br>
+        • Intégrez le SEO multilingue<br>
+        • Utilisez des données structurées
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-microphone"></i> 2. Écrire pour la recherche vocale</h2>
+      <p>L'algorithme Google version 2024 se dote d'un nouveau modèle de machine learning : LaMDA (Language Model for Dialogue Applications). Celui-ci veut explorer l'art de la conversation pour améliorer les requêtes envoyées suite à une recherche vocale.</p>
+      <div class="blog-tip">
+        <strong>Exemple :</strong> Au lieu de "chaussures de randonnées", utilisez "quelles sont les chaussures adaptées pour une randonnée de 3 jours en montagne ?"
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-image"></i> 3. Optimiser le référencement des images</h2>
+      <p>MUM est capable d'interpréter des images ou des vidéos pour fournir de meilleurs résultats aux internautes.</p>
+      <div class="blog-tip">
+        <strong>Pour plaire à l'algorithme Google en 2024 :</strong><br>
+        • Ajoutez des médias à votre contenu<br>
+        • Optimisez les visuels avec du texte descriptif<br>
+        • Utilisez des légendes et balises alt
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-heart"></i> 4. Introduire de l'empathie dans vos contenus</h2>
+      <p>Derrière chaque requête se cache une personne réelle, motivée par un besoin et une émotion authentique. Votre contenu doit répondre à ce besoin pour apporter de la valeur ajoutée à l'internaute.</p>
+      <div class="blog-quote">Anticipez les besoins de vos visiteurs et créez des contenus pour y répondre, simplement en faisant preuve d'empathie.</div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-lightbulb"></i> 5. Intégrer des accroches originales</h2>
+      <p>Avec la quantité importante de contenus publiés régulièrement sur la toile, il est devenu difficile de trouver un article unique et précieux. Vous devez vous démarquer dans les résultats de recherche.</p>
+      <div class="blog-tip">
+        <strong>Comment être original :</strong><br>
+        • Trouvez UN élément qui va vous démarquer<br>
+        • Proposez votre touche personnelle<br>
+        • Utilisez des formats différents (infographie, checklist, podcast)
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-sitemap"></i> 6. Utiliser l'indexation sémantique latente (LSI)</h2>
+      <p>L'indexation sémantique latente (LSI) a beaucoup évolué au cours de la dernière décennie. Vous devez inclure davantage de termes sémantiquement liés dans vos contenus.</p>
+      <div class="blog-tip">Utilisez des synonymes ou d'autres variantes proches pour enrichir le vocabulaire de votre texte.</div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-link"></i> 7. Améliorer votre stratégie de maillage interne</h2>
+      <p>Pour augmenter l'autorité de votre page web aux yeux de l'algorithme Google en 2024, continuez d'inclure des liens internes dans vos textes.</p>
+      <div class="blog-tip">
+        <strong>Stratégies de maillage interne :</strong><br>
+        • Orientez les liens des pages à fort trafic vers les pages de conversion<br>
+        • Dirigez les pages à haute autorité vers les pages à faible trafic<br>
+        • Utilisez un langage naturel pour votre texte d'ancrage
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-bullseye"></i> 8. Miser sur les mots-clés à double intention de recherche</h2>
+      <p>Une même requête peut répondre à plusieurs intentions de recherche. C'est ce qu'on appelle un mot-clé à intention mixte ou double.</p>
+      <div class="blog-tip">
+        <strong>Pour avoir des sitelinks :</strong><br>
+        • Veillez au maillage interne<br>
+        • Travaillez le menu et la structure de votre site<br>
+        • Générez un cocon sémantique autour d'un sujet
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-star"></i> 9. Optimiser vos paragraphes pour les featured snippets</h2>
+      <p>La majorité des featured snippets proposés par Google sont tirés de paragraphes de 40 à 50 mots. C'est également la longueur idéale pour conserver l'attention du lecteur.</p>
+      <div class="blog-tip">
+        <strong>Pour atteindre la position 0 :</strong><br>
+        • Divisez vos textes en court extraits<br>
+        • Rédigez vos H1 et H2 sous forme de questions<br>
+        • Privilégiez les listes numérotées
+      </div>
+    </div>
+
+    <div class="blog-section">
+      <h2><i class="fas fa-chart-line"></i> 10. Veiller régulièrement sur les tendances SEO</h2>
+      <p>Les algorithmes de Google sont régulièrement modifiés. Il est donc essentiel de vous informer sur les innovations SEO, les modifications de l'algorithme et toutes les nouvelles techniques émergentes.</p>
+    </div>
+
+    <div class="blog-summary">
+      <h3><i class="fas fa-lightbulb"></i> Notre astuce pour connaître les évolutions SEO</h3>
+      <p>La veille SEO est chronophage et peut s'avérer complexe si vous ne maîtrisez pas le langage inhérent au référencement. Mais Porokhane Digital vous accompagne à travers ses articles !</p>
+      <div class="blog-quote">Depuis plus de 20 ans, une chose qui ne change pas, c'est de devoir rédiger du contenu de qualité pour référencer votre site internet.</div>
+    </div>
+
+    <div class="blog-hashtags">
+      <span class="blog-hashtag">#SEO</span>
+      <span class="blog-hashtag">#Google</span>
+      <span class="blog-hashtag">#Algorithme</span>
+      <span class="blog-hashtag">#Référencement</span>
+      <span class="blog-hashtag">#Digital</span>
+    </div>
+
+    <div class="blog-articles">
+      <h2><i class="fas fa-book"></i> Autres articles</h2>
+
+      <div class="blog-article-item">
+        <div class="blog-article-title"><i class="fas fa-shield-alt"></i> Sécuriser son site WordPress</div>
+        <p>Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces.</p>
+        <a class="blog-article-link" href="wordpress.html">Lire l'article →</a>
+      </div>
+
+      <div class="blog-article-item">
+        <div class="blog-article-title"><i class="fas fa-tools"></i> 14 outils SEO gratuits à tester</div>
+        <p>Les meilleurs outils pour trouver des mots-clés et analyser ton trafic.</p>
+        <a class="blog-article-link" href="seo_outil.html">Lire l'article →</a>
+      </div>
     </div>
   </main>
+
   <!-- Pied de page -->
   <footer class="footer">
     <form class="newsletter" id="newsletterForm">
@@ -286,6 +359,4 @@
     </form>
   </div>
 
-  <!-- Chatbot et JS ... -->
-</body>
-</html>
+  <!-- Chatbot et JS ... --
