--- a/index.html
+++ b/index.html
@@ -1854,7 +1854,7 @@
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 10 juin 2024 • <i class="far fa-folder"></i> SEO</div>
             <h3>Algorithme Google SEO 2024 : 10 astuces pour être visible</h3>
             <p>Découvrez les nouvelles règles Google pour 2024 et 10 astuces pour rendre votre site visible et performant.</p>
-            <a href="#" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+            <a href="visible_seo.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
   
@@ -1867,7 +1867,7 @@
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 5 juin 2024 • <i class="far fa-folder"></i> SEO</div>
             <h3>SEO : 14 outils gratuits pour trouver des mots-clés pertinents</h3>
             <p>Voici 14 outils gratuits pour trouver les meilleurs mots-clés et booster votre référencement sur Google.</p>
-            <a href="#" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+            <a href="seo_outil.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
       </div>
@@ -1956,7 +1956,7 @@
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de MoTransfert</h3>
           <p style="color: var(--gris-texte); flex: 1;">Conception de supports digitaux, articles et vidéos pour renforcer la notoriété et l'engagement autour de MoTransfert.</p>
-          <a href="motransfert.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
+          <a href="mo.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
     </div>
