--- a/seo.html
+++ b/seo.html
@@ -132,7 +132,7 @@
             <li><a href="automatisation.html" class="submenu-link">Automatisation</a></li>
             <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
             <li><a href="erp.html" class="submenu-link">ERP</a></li>
-            <li><a href="intelligence_artificielle.html" class="submenu-link">Intelligence Artificielle</a></li>
+            <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
@@ -147,7 +147,7 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title">Notre Stratégie SEO</div>
+    <div class="service-title">Notre stratégie de référencement naturel SEO</div>
     <div class="service-intro">Pourquoi investir dans le référencement naturel (SEO) ?<br>Un bon référencement naturel est crucial pour augmenter durablement votre visibilité en ligne, générer du trafic qualifié et booster vos conversions sans dépendre uniquement de la publicité payante.</div>
     <div class="service-section-title">Notre approche structurée en 5 étapes</div>
     <ol class="service-steps">
