--- a/site.html
+++ b/site.html
@@ -103,7 +103,15 @@
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
       <div class="nav-logo"><h2>Porokhane Digital</h2></div>
-      <ul class="nav-menu">
+      
+      <!-- Menu Hamburger -->
+      <button class="hamburger" id="hamburger" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      
+      <ul class="nav-menu" id="nav-menu">
         <li><a href="index.html" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <li class="nav-item">
