--- a/a-propos.html
+++ b/a-propos.html
@@ -1249,7 +1249,7 @@
           <div class="role">Directrice Technique</div>
           <p>Pilote la stratégie, la qualité, l'innovation et le bien-être de l'équipe. Stratégie globale des projets, SEO technique, rédaction d'articles de blog, newsletters, emailing, recherche de mots-clés.</p>
           <div class="social-links">
-            <a href="#" aria-label="LinkedIn" class="linkedin-link"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/mame-diarra-bousso-l%C3%B4-9a23b6140/" aria-label="LinkedIn" class="linkedin-link"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
         <div class="team-card">
