--- a/index.html
+++ b/index.html
@@ -2009,7 +2009,7 @@
         <div class="service-card">
           <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Marketing Digital">
           <h3>Marketing Digital</h3>
-          <p>Audit Express, Création/Réfonte de site, Stratégie digitale, SEO et Réseaux sociaux.</p>
+          <p>Audit Express, Stratégie digitale, SEO et Réseaux sociaux.</p>
           <a href="marketing.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
   
