--- a/blog.html
+++ b/blog.html
@@ -250,109 +250,39 @@
         <!-- Article 1 -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=600&q=80" alt="Transformation digitale">
+            <img src="https://images.unsplash.com/photo-1510511459019-5dda7724fd87?auto=format&fit=crop&w=600&q=80" alt="Sécurité WordPress - cadenas sur écran">
           </div>
           <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 12 juin 2024</div>
-            <h3>Transformation digitale : les clés du succès en Afrique</h3>
-            <p>Découvrez comment les entreprises africaines peuvent réussir leur transformation digitale grâce à l’innovation, la formation et l’accompagnement sur-mesure.</p>
-            <a href="#" class="btn">Lire la suite</a>
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 15 juin 2024 • <i class="far fa-folder"></i> Cybersécurité</div>
+            <h3>Sécuriser son site WordPress</h3>
+            <p>Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces, accessibles à tous.</p>
+            <a href="wordpress.html" class="btn btn-secondary" id="openWpModal"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
+
         <!-- Article 2 -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Cybersécurité">
+            <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=600&q=80" alt="Google SEO 2024 - algorithme et visibilité">
           </div>
           <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 2 juin 2024</div>
-            <h3>Cybersécurité : protéger son entreprise à l’ère du numérique</h3>
-            <p>Les bonnes pratiques pour sécuriser ses données, sensibiliser ses équipes et anticiper les menaces cyber en Afrique.</p>
-            <a href="#" class="btn">Lire la suite</a>
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 10 juin 2024 • <i class="far fa-folder"></i> SEO</div>
+            <h3>Algorithme Google SEO 2024 : 10 astuces pour être visible</h3>
+            <p>Découvrez les nouvelles règles Google pour 2024 et 10 astuces pour rendre votre site visible et performant.</p>
+            <a href="visible_seo.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
+
         <!-- Article 3 -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80" alt="Innovation digitale">
+            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=600&q=80" alt="SEO outils mots-clés - ordinateur avec graphique et loupe">
           </div>
           <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 25 mai 2024</div>
-            <h3>Innovation digitale : tendances et opportunités pour 2024</h3>
-            <p>Intelligence artificielle, cloud, marketing digital… Tour d’horizon des tendances qui vont façonner le numérique africain cette année.</p>
-            <a href="#" class="btn">Lire la suite</a>
-          </div>
-        </div>
-        <!-- Article 4 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1515168833906-d2a3b82b302b?auto=format&fit=crop&w=600&q=80" alt="Marketing digital">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 18 mai 2024</div>
-            <h3>Marketing digital : booster sa visibilité en ligne</h3>
-            <p>Stratégies et outils pour améliorer la présence digitale de votre entreprise et attirer de nouveaux clients.</p>
-            <a href="#" class="btn">Lire la suite</a>
-          </div>
-        </div>
-        <!-- Article 5 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" alt="Formation numérique">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 10 mai 2024</div>
-            <h3>Formation numérique : un levier pour l’employabilité</h3>
-            <p>Pourquoi la formation continue est essentielle pour s’adapter aux évolutions du digital et rester compétitif.</p>
-            <a href="#" class="btn">Lire la suite</a>
-          </div>
-        </div>
-        <!-- Article 6 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1465101178521-c1a9136a3b41?auto=format&fit=crop&w=600&q=80" alt="Cloud computing">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 2 mai 2024</div>
-            <h3>Cloud computing : avantages pour les PME africaines</h3>
-            <p>Découvrez comment le cloud permet de gagner en flexibilité, sécurité et performance, même pour les petites structures.</p>
-            <a href="#" class="btn">Lire la suite</a>
-          </div>
-        </div>
-        <!-- Article 7 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=600&q=80" alt="E-commerce Afrique">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 25 avril 2024</div>
-            <h3>E-commerce : réussir sa boutique en ligne en Afrique</h3>
-            <p>Les étapes clés pour lancer et développer un site e-commerce performant et adapté au marché africain.</p>
-            <a href="#" class="btn">Lire la suite</a>
-          </div>
-        </div>
-        <!-- Article 8 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80" alt="SEO Afrique">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 15 avril 2024</div>
-            <h3>SEO : optimiser son référencement naturel en Afrique</h3>
-            <p>Conseils pratiques pour améliorer la visibilité de votre site sur Google et attirer un trafic qualifié.</p>
-            <a href="#" class="btn">Lire la suite</a>
-          </div>
-        </div>
-        <!-- Article 9 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" alt="Transformation digitale Afrique">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="fas fa-calendar-alt"></i> 1 avril 2024</div>
-            <h3>Transformation digitale : retours d’expérience d’entrepreneurs africains</h3>
-            <p>Des témoignages inspirants sur les défis et réussites de la digitalisation en Afrique francophone.</p>
-            <a href="#" class="btn">Lire la suite</a>
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 5 juin 2024 • <i class="far fa-folder"></i> SEO</div>
+            <h3>SEO : 14 outils gratuits pour trouver des mots-clés pertinents</h3>
+            <p>Voici 14 outils gratuits pour trouver les meilleurs mots-clés et booster votre référencement sur Google.</p>
+            <a href="seo_outil.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
       </div>
