--- a/index.html
+++ b/index.html
@@ -2100,7 +2100,7 @@
         </div>
       </div>
       <div style="text-align:center; margin-top:2rem;">
-        <a href="blog.html" class="btn btn-primary">Voir tous les blogs</a>
+        <a href="blog.html" class="btn btn-primary">Voir plus d'articles</a>
       </div>
     </div>
   </section>
