--- a/index.html
+++ b/index.html
@@ -2133,9 +2133,9 @@
           <div class="carousel-item">
             <div class="carousel-content">
               <img src="porokhane1.jpg" class="carousel-photo" alt="Aminata Sarr">
-              <p>"MoTransfert a bénéficié d'une refonte complète de son application mobile grâce à l'équipe Porokhane. Résultat : +40% d'utilisateurs actifs et une expérience client nettement améliorée. Merci pour votre professionnalisme !"</p>
+              <p>"MonTransfert a bénéficié d'une refonte complète de son application mobile grâce à l'équipe Porokhane. Résultat : +40% d'utilisateurs actifs et une expérience client nettement améliorée. Merci pour votre professionnalisme !"</p>
               <div class="carousel-author">Aminata Sarr</div>
-              <div class="carousel-position">Responsable Produit, MoTransfert</div>
+              <div class="carousel-position">Responsable Produit, MonTransfert</div>
             </div>
           </div>
         </div>
@@ -2182,8 +2182,8 @@
           <img src="VOI.jpg" alt="Témoignage client Porokhane">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
-          <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de MoTransfert</h3>
-          <p style="color: var(--gris-texte); flex: 1;">Conception de supports digitaux, articles et vidéos pour renforcer la notoriété et l'engagement autour de MoTransfert.</p>
+          <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de MonTransfert</h3>
+          <p style="color: var(--gris-texte); flex: 1;">Conception de supports digitaux, articles et vidéos pour renforcer la notoriété et l'engagement autour de MonTransfert.</p>
           <a href="mo.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
