--- a/a-propos.html
+++ b/a-propos.html
@@ -1119,7 +1119,7 @@
       </div>
       <div style="max-width:900px;margin:0 auto;">
         <p style="font-size:1.13rem;color:var(--gris-texte);margin-bottom:2rem;">
-          Porokhane Digital Consulting est une agence digitale sénégalaise engagée pour l’excellence, l’innovation et l’accompagnement humain. Nous aidons les entreprises et organisations africaines à réussir leur transformation numérique grâce à une équipe pluridisciplinaire, passionnée et experte dans tous les domaines du digital.<br><br>
+          Porokhane Digital Consulting est une agence digitale sénégalaise engagée pour un numérique inclusif, innovant et humain, au service de l’excellence et de l’accès équitable aux opportunités du digital.Nous aidons les entreprises et organisations africaines à réussir leur transformation numérique grâce à une équipe pluridisciplinaire, passionnée et experte dans tous les domaines du digital.<br><br>
           Notre mission est de propulser nos clients vers l’excellence grâce à des solutions sur-mesure, innovantes et responsables. Nous croyons en une approche collaborative, transparente et durable, où chaque projet est un partenariat de confiance.<br><br>
           Notre équipe réunit des talents locaux et internationaux, experts en développement web, marketing digital, cybersécurité, formation et accompagnement stratégique. Nous mettons l’humain, la qualité et l’éthique au cœur de chaque action.
         </p>
