--- a/a-propos.html
+++ b/a-propos.html
@@ -1128,7 +1128,7 @@
           Chez Porokhane, nous croyons qu’un avenir digital inclusif peut faire émerger une Afrique forte.<br>
           C’est pourquoi nous levons chaque jour les barrières numériques – de l’apprentissage des jeunes à la productivité des entreprises.
         </p>
-        <h3 style="color:var(--bleu);margin-bottom:1rem;">De la vision à l’action</h3>
+        <h3 style="color:var(--vert);margin-bottom:1rem;">De la vision à l’action</h3>
         <ul style="font-size:1.08rem;color:var(--gris-texte);margin-bottom:2rem;list-style: none;padding-left:0;">
           <li style="margin-bottom:0.7rem;"> Nous formons les jeunes pour qu’ils deviennent les bâtisseurs d’un numérique africain solide.</li>
           <li style="margin-bottom:0.7rem;">Nous accompagnons les entreprises pour qu’elles deviennent plus performantes, visibles et autonomes.</li>
