--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Porokhane Digital Consulting - Solutions Digitales Innovantes</title>
-  <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web et mobile, applications mobiles, marketing digital.">
+  <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web et Mobile, applications mobiles, marketing digital.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -1833,7 +1833,7 @@
         
         <div class="hero-buttons">
           <a href="a-propos.html" class="btn btn-primary">
-            <i class="fas fa-handshake"></i>
+            
              En savoir plus
           </a>
         </div>
@@ -2394,7 +2394,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
