--- a/formations.html
+++ b/formations.html
@@ -775,7 +775,7 @@
         <!-- Formation Robotique -->
         <div class="formation-card" id="robotique">
           <div class="formation-image">
-            <img src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?auto=format&fit=crop&w=600&q=80" alt="Robotique">
+            <img src="RO.jpg" alt="Robotique">
           </div>
           <div class="formation-content">
             <div class="formation-icon">
@@ -792,7 +792,7 @@
         <!-- Formation Impression 3D -->
         <div class="formation-card" id="impression3d">
           <div class="formation-image">
-            <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=600&q=80" alt="Impression 3D">
+            <img src="impression.jpg" alt="Impression 3D">
           </div>
           <div class="formation-content">
             <div class="formation-icon">
@@ -809,7 +809,7 @@
         <!-- Formation Cybersécurité -->
         <div class="formation-card" id="cybersecurite">
           <div class="formation-image">
-            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=600&q=80" alt="Cybersécurité">
+            <img src="supe.jpg" alt="Cybersécurité">
           </div>
           <div class="formation-content">
             <div class="formation-icon">
